--- a/src/RE_concepts/x86/x86.md
+++ b/src/RE_concepts/x86/x86.md
@@ -1,5 +1,12 @@
-# x86 architecture concepts
+# x86 ARCHITECTURE CONCEPTS
 
-**1-> BASIC THEORY**
+**1-> BASIC THEORY**\
+...**1.1-> REGISTER PURPOSE**
 
-**2-> INSTRUCTION SET**
+**2-> INSTRUCTION SET**\
+...**2.1->SYNTAX**\
+...**2.2->DATA MOVEMENT**\
+...**2.3->ARITHMETIC OPERTAORS**\
+...**2.4->STACK OPERATIONS**\
+...**2.5->FUNCTION INVOCATION**\
+...**2.6->CALLING CONVENTION**\
